--- a/assets/contact.html
+++ b/assets/contact.html
@@ -2,82 +2,139 @@
 <html lang="en">
 
 <head>
+    <!-- Essential SEO Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Form</title>
+    <meta name="description"
+        content="Contact Sarwan Yadav via this secure and optimized contact form. Reach out with your inquiries and feedback.">
+    <meta name="keywords" content="Contact, Sarwan Yadav, TypeBlitz, Support, Inquiry">
+    <meta name="author" content="Sarwan Yadav">
+    <title>Contact Sarwan Yadav | TypeBlitz</title>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://typeblitz.tech/contact">
+    <meta property="og:title" content="Contact Sarwan Yadav | TypeBlitz">
+    <meta property="og:description"
+        content="Contact Sarwan Yadav via this secure and optimized contact form. Reach out with your inquiries and feedback.">
+    <meta property="og:image" content="https://typeblitz.tech/assets/contact-thumbnail.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://typeblitz.tech/contact">
+    <meta property="twitter:title" content="Contact Sarwan Yadav | TypeBlitz">
+    <meta property="twitter:description"
+        content="Contact Sarwan Yadav via this secure and optimized contact form. Reach out with your inquiries and feedback.">
+    <meta property="twitter:image" content="https://typeblitz.tech/assets/contact-thumbnail.jpg">
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ContactPage",
+      "mainEntity": {
+        "@type": "Organization",
+        "name": "Sarwan Yadav",
+        "url": "https://typeblitz.tech",
+        "logo": "https://typeblitz.tech/assets/logo.png",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "email": "sarwanyadav6174@gmail.com",
+          "contactType": "Customer Support"
+        }
+      }
+    }
+    </script>
+
+    <!-- Styles for SEO and Performance -->
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #e0e0e0;
             margin: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            padding: 10px;
+            box-sizing: border-box;
+            color: #333;
         }
 
         .contact-form {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            background-color: #fff;
+            padding: 25px;
+            border-radius: 10px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
             width: 100%;
             max-width: 400px;
             box-sizing: border-box;
         }
 
         .contact-form h2 {
-            margin-top: 0;
-            margin-bottom: 15px;
+            margin: 0 0 20px;
             text-align: center;
+            color: #333;
+            font-size: 24px;
         }
 
         .contact-form label {
             display: block;
-            margin-bottom: 5px;
+            margin-bottom: 8px;
             font-weight: bold;
+            color: #555;
+            font-size: 14px;
         }
 
         .contact-form input,
         .contact-form textarea {
             width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
+            padding: 12px;
+            margin-bottom: 15px;
             border: 1px solid #ccc;
-            border-radius: 4px;
+            border-radius: 5px;
             font-size: 16px;
             box-sizing: border-box;
+            transition: border-color 0.3s ease;
+        }
+
+        .contact-form input:focus,
+        .contact-form textarea:focus {
+            border-color: #66afe9;
+            outline: none;
+            box-shadow: 0 0 8px rgba(102, 175, 233, 0.6);
         }
 
         .contact-form button {
-            background-color: #5cb85c;
+            background-color: #28a745;
             color: white;
             border: none;
-            padding: 10px 20px;
+            padding: 12px;
             font-size: 16px;
-            border-radius: 4px;
+            border-radius: 5px;
             cursor: pointer;
+            transition: background-color 0.3s ease;
             width: 100%;
             box-sizing: border-box;
         }
 
         .contact-form button:hover {
-            background-color: #4cae4c;
+            background-color: #218838;
         }
 
         @media (max-width: 480px) {
             .contact-form {
-                padding: 15px;
+                padding: 20px;
             }
 
             .contact-form h2 {
-                font-size: 20px;
+                font-size: 22px;
             }
 
             .contact-form input,
             .contact-form textarea,
             .contact-form button {
-                font-size: 14px;
+                font-size: 15px;
             }
         }
     </style>
@@ -96,15 +153,20 @@
             <label for="message">Your Message</label>
             <textarea id="message" name="message" rows="5" required></textarea>
 
-            <!-- Hidden fields and submit button -->
-            <input type="hidden" name="_template" value="table" />
-            <input type="hidden" name="_subject" value="TypeBlitz Contact Form: New Submission!" />
-            <input type="hidden" name="_captcha" value="false" />
-            <input type="hidden" name="_next" value="https://typeblitz.tech/assets/success.html" />
+            <!-- Hidden fields -->
+            <input type="hidden" name="_template" value="table">
+            <input type="hidden" name="_subject" value="TypeBlitz Contact Form: New Submission!">
+            <input type="hidden" name="_captcha" value="false">
+            <input type="hidden" name="_next" value="https://typeblitz.tech/assets/success.html">
 
             <button type="submit">Send Message</button>
         </form>
     </div>
+
+    <!-- Performance optimization scripts -->
+    <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="Simple Analytics tracking"
+            referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </body>
 
 </html>
