--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
   <link rel="preconnect" href="https://cdn.jsdelivr.net">
   <link rel="preconnect" href="https://p4.wallpaperbetter.com">
 
-  <!-- Stylesheet Loading -->
-  <link rel="stylesheet" href="assets/preloader.css" />
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="https://typeblitz.tech/assets/img/TypeBlitz.ico" />
+
+  <!-- External Scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" defer></script>
 
   <!-- Preload critical resources for improved performance -->
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" as="style"
@@ -39,11 +42,8 @@
   <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style"
     onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="https://typeblitz.tech/assets/img/TypeBlitz.ico" />
-
-  <!-- External Scripts -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" defer></script>
+  <!-- Stylesheet Loading -->
+  <link rel="stylesheet" href="assets/preloader.css" />
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -57,7 +57,7 @@
 
 <body style="--i: 0; color: #333; background-color: #f8f9fa;">
 
-  <!-- Preloader -->
+  <!-- Preloader Section -->
   <div class="preloader">
     <div class="preloader-inner">
       <div></div>
@@ -66,7 +66,7 @@
     </div>
   </div>
 
-  <!-- Navigation -->
+  <!-- Navigation Section -->
   <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
     <div class="container">
       <a class="navbar-brand" href="#">TypeBlitz</a>
@@ -81,30 +81,35 @@
           <li class="nav-item"><a class="nav-link" href="#features">Features</a></li>
           <li class="nav-item"><a class="nav-link" href="#download">Download</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="assets\MIT_License.html">Licenses</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Jumbotron -->
+  <!-- Jumbotron Section -->
   <section id="jumbotron">
     <div class="bg-image p-5 text-center shadow-lg rounded mb-5 text-white" id="backgroundImageContainer"
-      style="background-color: #212529;"> <!-- Darkened background for better contrast -->
+      style="background-color: #212529;">
+      <!-- Darkened background for better contrast -->
       <h1 class="display-2" id="changing-text">TypeBlitz</h1>
       <p class="lead">Elevate Your Typing Speed and Accuracy</p>
       <a href="production/redirect.html" class="btn btn-primary btn-lg">Download the Latest Version Now</a>
     </div>
   </section>
 
-  <!-- Introduction -->
+  <!-- Introduction Section -->
   <section id="introduction" class="py-5">
     <div class="container">
       <div class="row">
         <div class="col-md-8 mx-auto text-center">
           <h2 class="display-4 mb-4">Welcome to TypeBlitz</h2>
-          <p class="lead">TypeBlitz is a cutting-edge typing application crafted to elevate your typing speed and
-            accuracy. Whether you're just starting out or a seasoned typist, TypeBlitz offers a personalized learning
-            experience to help you achieve your typing goals. Engage in dynamic typing exercises with instant feedback
+          <p class="lead">TypeBlitz is a cutting-edge typing application
+            crafted to elevate your typing speed and
+            accuracy. Whether you're just starting out or a seasoned typist,
+            TypeBlitz offers a personalized learning
+            experience to help you achieve your typing goals. Engage in
+            dynamic typing exercises with instant feedback
             to track and improve your progress.</p>
           <p>Made with ❤️ by <a href="https://ellowdigitals.netlify.app/" target="_blank"
               rel="noopener noreferrer">EllowDigitals</a></p>
@@ -124,7 +129,8 @@
               <div class="feature-item">
                 <i class="fas fa-keyboard"></i>
                 <h3>Effortless Typing Improvement</h3>
-                <p>TypeBlitz offers a diverse range of exercises and challenges meticulously curated to enhance your
+                <p>TypeBlitz offers a diverse range of exercises and
+                  challenges meticulously curated to enhance your
                   typing speed and accuracy.</p>
               </div>
             </div>
@@ -132,7 +138,8 @@
               <div class="feature-item">
                 <i class="fas fa-desktop"></i>
                 <h3>User-Friendly Interface</h3>
-                <p>With its intuitive design, TypeBlitz provides a distraction-free environment, enabling you to focus
+                <p>With its intuitive design, TypeBlitz provides a
+                  distraction-free environment, enabling you to focus
                   solely on enhancing your typing skills.</p>
               </div>
             </div>
@@ -140,7 +147,8 @@
               <div class="feature-item">
                 <i class="fas fa-save"></i>
                 <h3>Compact Size</h3>
-                <p>Despite its rich feature set, TypeBlitz is lightweight and minimizes the storage footprint on your
+                <p>Despite its rich feature set, TypeBlitz is lightweight and
+                  minimizes the storage footprint on your
                   device.</p>
               </div>
             </div>
@@ -148,7 +156,8 @@
               <div class="feature-item">
                 <i class="fas fa-chart-line"></i>
                 <h3>Progress Tracking</h3>
-                <p>Keep track of your typing progress and witness your skills improve over time with TypeBlitz's
+                <p>Keep track of your typing progress and witness your skills
+                  improve over time with TypeBlitz's
                   comprehensive progress tracking feature.</p>
               </div>
             </div>
@@ -211,7 +220,8 @@
       <div class="row">
         <div class="col-md-12 text-center">
           <h2 class="section-heading mb-4">Download</h2>
-          <p class="section-subheading mb-5">Access previous versions of TypeBlitz by clicking on the buttons below.</p>
+          <p class="section-subheading mb-5">Access previous versions of
+            TypeBlitz by clicking on the buttons below.</p>
         </div>
       </div>
       <div class="row justify-content-center">
@@ -243,69 +253,55 @@
     </div>
   </section>
 
-
-
   <!-- Contact Section -->
-  <section class="contact py-5" id="contact">
+  <section id="contact" class="contact py-5">
     <div class="container">
-      <div class="max-width section-box">
-        <h2 class="title">Get in Touch</h2>
-        <div class="contact-content">
-          <div class="column right">
-            <p>If you wish to contact us, kindly complete the form below:</p>
-            <div class="form-container">
-              <form action="https://formsubmit.co/sarwanyadav6174@gmail.com" method="POST">
-                <div class="row">
-                  <div class="col-lg-12 mb-3">
-                    <div class="mb-3">
-                      <label for="name" class="form-label">Your Name</label>
-                      <input type="text" name="name" class="form-control" id="name" required autocomplete="name">
-                      <div class="invalid-feedback">Please enter your name.</div>
-                    </div>
-                    <div class="mb-3">
-                      <label for="email" class="form-label">Your Email</label>
-                      <input type="email" name="email" class="form-control" id="email" required autocomplete="email">
-                      <div class="invalid-feedback">Please enter a valid email address.</div>
-                    </div>
-                    <div class="mb-3">
-                      <label for="message" class="form-label">Your Message</label>
-                      <textarea name="message" class="form-control" id="message" rows="4" required></textarea>
-                      <div class="invalid-feedback">Please enter your message.</div>
-                    </div>
-                  </div>
-                </div>
-                <!-- Hidden fields and submit button -->
-                <input type="hidden" name="_template" value="table">
-                <input type="hidden" name="_subject" value="TypeBlitz: New Submission!">
-                <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_next" value="https://typeblitz.tech/assets/success.html">
-                <button type="submit" class="btn btn-primary">Submit <i class="fas fa-paper-plane"></i></button>
-              </form>
-            </div>
+      <h2 class="text-center mb-4">Get in Touch</h2>
+      <div class="contact-form">
+        <p class="text-center mb-4">If you wish to contact us, please complete the form below:</p>
+        <form action="https://formsubmit.co/sarwanyadav6174@gmail.com" method="POST">
+          <div class="form-group mb-3">
+            <label for="name" class="form-label">Your Name</label>
+            <input type="text" name="name" class="form-control" id="name" required autocomplete="name">
           </div>
-        </div>
+          <div class="form-group mb-3">
+            <label for="email" class="form-label">Your Email</label>
+            <input type="email" name="email" class="form-control" id="email" required autocomplete="email">
+          </div>
+          <div class="form-group mb-3">
+            <label for="message" class="form-label">Your Message</label>
+            <textarea name="message" class="form-control" id="message" rows="4" required></textarea>
+          </div>
+          <!-- Hidden fields and submit button -->
+          <input type="hidden" name="_template" value="table">
+          <input type="hidden" name="_subject" value="TypeBlitz: New Submission!">
+          <input type="hidden" name="_captcha" value="false">
+          <input type="hidden" name="_next" value="https://typeblitz.tech/assets/success.html">
+          <button type="submit" class="btn btn-primary w-100">Submit</button>
+        </form>
       </div>
     </div>
   </section>
 
+  <!-- Footer Section -->
   <footer class="footer py-4">
     <div class="max-width">
       <div class="footer-content text-center">
-        <div class="social-icons">
-          <a href="https://www.instagram.com/typeblitz/" target="_blank" class="instagram-link"
+        <div class="social-icons mb-3">
+          <a href="https://www.instagram.com/typeblitz/" target="_blank" class="social-icon instagram"
             aria-label="Visit TypeBlitz on Instagram">
             <i class="fab fa-instagram" aria-hidden="true"></i>
           </a>
-          <a href="https://sarwan.netlify.app/" target="_blank" class="developer-link"
+          <a href="https://sarwan.netlify.app/" target="_blank" class="social-icon portfolio"
             aria-label="Visit Sarwan Yadav's Developer Portfolio">
-            <i class="fas fa-code" aria-hidden="true"></i>
+            <i class="fas fa-user" aria-hidden="true"></i>
           </a>
         </div>
-        <div class="footer-divider"></div>
-        <p>
+        <div class="footer-divider mb-3"></div>
+        <p class="text-white mb-0">
           <a href="https://typeblitz.tech/" class="text-white" aria-label="Visit TypeBlitz website">TypeBlitz</a> &copy;
           2024
-          <span class="text-white">Sarwan Yadav</span>. All Rights Reserved.
+          <span>Sarwan Yadav</span>. All Rights Reserved.
         </p>
       </div>
     </div>
@@ -316,7 +312,8 @@
   <div class="popup-container" id="popup">
     <div class="popup-content">
       <h2>New version available!</h2>
-      <p>Click the button below to download the latest version of our TypeBlitz.</p>
+      <p>Click the button below to download the latest version of our
+        TypeBlitz.</p>
       <a href="production\redirect.html" class="btn" target="_blank" rel="noopener noreferrer">Download Now</a>
       <button class="close-btn" id="closePopup">&times;</button>
     </div>
