--- a/assets/MIT_License.html
+++ b/assets/MIT_License.html
@@ -8,7 +8,6 @@
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-
         gtag('config', 'G-BN5JC7B3SH');
     </script>
     <meta charset="UTF-8" />
@@ -17,30 +16,27 @@
     <style>
         html,
         body {
-            overflow: hidden;
             height: 100%;
             margin: 0;
             font-family: "Arial", sans-serif;
             display: flex;
             align-items: center;
             justify-content: center;
-            background: linear-gradient(to right,
-                    #667db6,
-                    #0082c8,
-                    #0082c8,
-                    #667db6);
+            background: linear-gradient(135deg, #667db6, #667db6);
+            color: #fff;
         }
 
         .license-container {
-            background: rgba(255, 255, 255, 0.2);
-            border-radius: 20px;
-            padding: 20px;
-            backdrop-filter: blur(20px);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            width: 80%;
-            max-width: 600px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 15px;
+            padding: 30px;
+            max-width: 700px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.3);
             animation: fadeIn 1s ease-in-out;
             overflow-y: auto;
+            max-height: 80%;
         }
 
         @keyframes fadeIn {
@@ -56,18 +52,28 @@
         }
 
         h1 {
-            color: #fff;
+            font-size: 2rem;
+            margin-bottom: 20px;
             text-align: center;
+            font-weight: bold;
+        }
+
+        p {
+            font-size: 1rem;
+            line-height: 1.5;
+            margin-bottom: 1rem;
         }
 
         pre {
-            background: rgba(255, 255, 255, 0.2);
+            background: rgba(255, 255, 255, 0.1);
             border-radius: 10px;
-            padding: 10px;
+            padding: 15px;
             overflow-x: auto;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             max-width: 100%;
             white-space: pre-wrap;
+            font-size: 0.9rem;
+            color: #ddd;
         }
     </style>
 </head>
@@ -75,26 +81,25 @@
 <body>
     <div class="license-container">
         <h1>MIT License</h1>
-        <p>
-            Copyright (c) 2023 Sarwan Yadav
-        </p>
-        <p>Permission is hereby granted, free of charge, to any person obtaining a copy
-            of this software and associated documentation files (the "Software"), to deal
-            in the Software without restriction, including without limitation the rights
-            to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-            copies of the Software, and to permit persons to whom the Software is
-            furnished to do so, subject to the following conditions:</p>
+        <p>Copyright &copy; 2024 Sarwan Yadav</p>
+        <pre>
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
 
-        <p>The above copyright notice and this permission notice shall be included in all
-            copies or substantial portions of the Software.</p>
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
 
-        <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-            IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-            FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-            AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-            LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-            OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-            SOFTWARE.</p>
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
         </pre>
     </div>
     <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
