--- a/assets/offline.html
+++ b/assets/offline.html
@@ -2,63 +2,54 @@
 <html lang="en">
 
 <head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BN5JC7B3SH"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-BN5JC7B3SH');
-  </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Oops! You're offline. Please check your internet connection and try again.">
+  <meta name="robots" content="noindex, nofollow">
   <title>Offline Page</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Load Bootstrap CSS from a CDN with integrity and crossorigin attributes -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ775PCpHbiHzl6rYcD1uVZv/et3URy9Bv1W" crossorigin="anonymous">
+
   <style>
-    /* Set a background color */
     body {
       background-color: #f8f9fa;
-    }
-
-    /* Center the content vertically */
-    .vh-100 {
-      min-height: 100vh;
+      margin: 0;
       display: flex;
+      justify-content: center;
       align-items: center;
+      height: 100vh;
+      text-align: center;
+      font-family: Arial, sans-serif;
     }
 
-    /* Style the heading */
     h1 {
-      font-size: 3rem;
-      margin-bottom: 2rem;
-      text-align: center;
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
     }
 
-    /* Style the message */
     p {
-      font-size: 1.5rem;
-      margin-bottom: 2rem;
-      text-align: center;
+      font-size: 1.25rem;
+      margin-bottom: 1.5rem;
     }
   </style>
 </head>
 
 <body>
-  <div class="container">
-    <div class="row vh-100 justify-content-center">
-      <div class="col-md-8">
-        <h1>Oops! You're Offline.</h1>
-        <p>Please check your internet connection and try again.</p>
-      </div>
-    </div>
+  <div>
+    <h1>Oops! You're Offline.</h1>
+    <p>Please check your internet connection and try again.</p>
   </div>
+
   <script>
     // Clear localStorage before closing the website
     window.addEventListener('beforeunload', function () {
       window.localStorage.clear();
     });
   </script>
+
+  <!-- Simple Analytics script -->
   <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
   <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt=""
       referrerpolicy="no-referrer-when-downgrade" /></noscript>
