--- a/assets/success.html
+++ b/assets/success.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Success Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <meta name="description" content="Your message has been successfully sent.">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://typeblitz.tech/success-page">
+
     <style>
         body {
             font-family: Arial, sans-serif;
