--- a/production/files/v2.6.html
+++ b/production/files/v2.6.html
@@ -2,33 +2,37 @@
 <html lang="en">
 
 <head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BN5JC7B3SH"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
-    gtag("config", "G-BN5JC7B3SH");
-  </script>
+  <!-- Metadata -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Enhance your skills with TypeBlitz, the innovative learning app. Download the latest version (v1.2) now for an immersive learning experience." />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    content="Enhance your skills with TypeBlitz, the innovative learning app. Download the latest version (v2.6) now for an immersive learning experience." />
   <meta name="keywords" content="skill improvement, learning, development, Sarwan Yadav, Download the latest version" />
   <meta name="author" content="Sarwan Yadav" />
-  <meta name="theme-color" content="#RRGGBB" />
+  <meta name="theme-color" content="#0076CE" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Download TypeBlitz: v2.6</title>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="image/TypeBlitz.ico">
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-  <title>Download TypeBlitz: v2.6</title>
+
+  <!-- Custom Styles -->
   <style>
     body {
       background-color: #f0f8ff;
+      color: #333;
     }
 
-    /* Additional CSS for a more designful download button */
+    .card {
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+      margin-bottom: 1rem;
+    }
+
     #download a {
       display: inline-block;
       padding: 15px 30px;
@@ -44,20 +48,12 @@
       background: linear-gradient(45deg, #0076ce, #4caf50);
       filter: blur(2px);
     }
-
-    .card {
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    }
   </style>
 </head>
 
 <body>
   <div class="container mt-5" id="container">
-    <h1 class="text-center mb-5">
-      Upgrade Your Typing Skills with TypeBlitz
-    </h1>
+    <h1 class="text-center mb-5">Upgrade Your Typing Skills with TypeBlitz</h1>
     <div class="row">
       <div class="col-md-8 offset-md-2">
         <div class="card">
@@ -73,59 +69,48 @@
           <div class="card-header">About This Version</div>
           <div class="card-body">
             <ul>
-              <li><b>App Updator:</b></li>
-              <ul>
-                <li>
-                  Code correction, optimization, and bug fixes for future
-                  error prevention.
-                </li>
-                <li>
-                  Enhanced overall performance and functionality of the
-                  updator.
-                </li>
-              </ul>
-              <li>
-                <b>Improved app performance and bug-free experience:</b>
+              <li><strong>App Updator:</strong>
+                <ul>
+                  <li>Code correction, optimization, and bug fixes for future error prevention.</li>
+                  <li>Enhanced overall performance and functionality of the updator.</li>
+                </ul>
               </li>
-              <ul>
-                <li>
-                  Updates will be rolled out systematically throughout the
-                  year.
-                </li>
-              </ul>
-              <li><b>Commitment to Continuous Improvement:</b></li>
-              <ul>
-                <li>
-                  Your feedback drives us to make TypeBlitz the premier
-                  learning platform.
-                </li>
-              </ul>
-              <li><b>Thank You for Choosing TypeBlitz:</b></li>
-              <ul>
-                <li>We express our gratitude for choosing TypeBlitz!</li>
-                <li>
-                  We look forward to providing you with an even better
-                  learning experience.
-                </li>
-              </ul>
+              <li><strong>Improved App Performance and Bug-Free Experience:</strong>
+                <ul>
+                  <li>Updates will be rolled out systematically throughout the year.</li>
+                </ul>
+              </li>
+              <li><strong>Commitment to Continuous Improvement:</strong>
+                <ul>
+                  <li>Your feedback drives us to make TypeBlitz the premier learning platform.</li>
+                </ul>
+              </li>
+              <li><strong>Thank You for Choosing TypeBlitz:</strong>
+                <ul>
+                  <li>We express our gratitude for choosing TypeBlitz!</li>
+                  <li>We look forward to providing you with an even better learning experience.</li>
+                </ul>
+              </li>
             </ul>
           </div>
         </div>
-
         <div class="text-center mt-4 mb-5" id="download">
-          <a href="https://typeblitz.tech/production/files/v2.6/TypeBlitz%20-%20Setup.exe">Download App</a>
+          <a href="https://typeblitz.tech/production/files/v2.6/TypeBlitz%20-%20Setup.exe"
+            aria-label="Download TypeBlitz v2.6">Download App</a>
         </div>
       </div>
     </div>
   </div>
+
   <!-- GSAP and jQuery/Bootstrap JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
+  <!-- Custom JavaScript -->
   <script>
-    // Animate the container with glass blur effect
+    // Animate elements
     gsap.from("#container", {
       opacity: 0,
       duration: 1,
@@ -133,7 +118,6 @@
       filter: "blur(10px)",
     });
 
-    // Animate the download button
     gsap.from("#download", {
       opacity: 0,
       y: 50,
@@ -141,7 +125,6 @@
       ease: "power2.out",
     });
 
-    // Animate the cards
     gsap.from(".card", {
       opacity: 0,
       y: 50,
@@ -151,25 +134,18 @@
       delay: 0.8,
     });
 
-    // Function to scroll to the end of the page
+    // Scroll to bottom
     function scrollToBottom() {
       window.scrollTo(0, document.body.scrollHeight);
     }
-
-    // Set a timeout to call the scrollToBottom function after 5 seconds
     setTimeout(scrollToBottom, 5000);
-  </script>
 
-  <script>
     // Clear localStorage before closing the website
     window.addEventListener("beforeunload", function () {
       window.localStorage.clear();
     });
   </script>
 
-  <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-  <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt=""
-      referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </body>
 
 </html>
