--- a/production/files/versions.html
+++ b/production/files/versions.html
@@ -2,25 +2,22 @@
 <html lang="en">
 
 <head>
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BN5JC7B3SH"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-BN5JC7B3SH');
-  </script>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Page Not Found - 404 Error</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="404 Error Page - TypeBlitz. The page you are looking for does not exist.">
+  <meta name="keywords" content="404 error, page not found, TypeBlitz">
+  <meta name="author" content="Sarwan Yadav">
+  <title>404 Not Found - TypeBlitz</title>
+
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css"
+    integrity="sha512-..." crossorigin="anonymous">
+
   <!-- Custom CSS -->
   <style>
     body {
       background-color: #f8f9fa;
-      padding-top: 60px; /* Add padding to top for better alignment */
+      padding-top: 60px;
     }
 
     .error-template {
@@ -45,39 +42,45 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"> <!-- Added a fixed-top class for a fixed navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
-      <!-- No heading -->
+      <!-- Navigation content here if needed -->
     </div>
   </nav>
+
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <div class="error-template">
           <h1>Oops!</h1>
           <h2>404 Not Found</h2>
-          <div class="error-details">
-            Sorry, the requested page is not available!
-          </div>
+          <p class="error-details">Sorry, the page you are looking for does not exist.</p>
           <div class="error-actions">
-            <a href="https://typeblitz.tech/" class="btn btn-primary btn-lg">Take Me Home</a>
+            <a href="https://typeblitz.tech/" class="btn btn-primary btn-lg">Go to Home</a>
             <a href="https://formsubmit.co/el/fokemo" class="btn btn-secondary btn-lg">Contact Support</a>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <!-- Bootstrap JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Bootstrap JS Bundle -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/js/bootstrap.bundle.min.js"
+    integrity="sha512-..." crossorigin="anonymous"></script>
+
+  <!-- Local Storage Clearing -->
   <script>
-    // Clear localStorage before closing the website
-    window.addEventListener('beforeunload', function () {
+    window.addEventListener('beforeunload', () => {
       window.localStorage.clear();
     });
   </script>
+
+  <!-- Simple Analytics -->
   <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-  <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt=""
-      referrerpolicy="no-referrer-when-downgrade" /></noscript>
+  <noscript>
+    <img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="Simple Analytics"
+      referrerpolicy="no-referrer-when-downgrade">
+  </noscript>
 </body>
 
 </html>
