--- a/production/redirect.html
+++ b/production/redirect.html
@@ -2,51 +2,66 @@
 <html lang="en">
 
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BN5JC7B3SH"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-BN5JC7B3SH');
-    </script>
+    <!-- Essential Meta Tags for SEO -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Redirecting to Download</title>
+    <meta name="description" content="Redirecting to the download page. Your download will start shortly.">
+    <meta name="keywords" content="download, redirect, file download">
+    <meta name="author" content="Sarwan Yadav">
+    <title>Redirecting to Download | TypeBlitz</title>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://typeblitz.tech/download">
+    <meta property="og:title" content="Redirecting to Download | TypeBlitz">
+    <meta property="og:description" content="Redirecting to the download page. Your download will start shortly.">
+    <meta property="og:image" content="https://typeblitz.tech/assets/download-thumbnail.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://typeblitz.tech/download">
+    <meta property="twitter:title" content="Redirecting to Download | TypeBlitz">
+    <meta property="twitter:description" content="Redirecting to the download page. Your download will start shortly.">
+    <meta property="twitter:image" content="https://typeblitz.tech/assets/download-thumbnail.jpg">
 
     <!-- Bootstrap CSS (or your preferred CSS framework) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Custom Styles for Responsiveness -->
     <style>
-        /* Custom styles for responsiveness */
-        @media (max-width: 767px) {
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
+        }
 
-            /* Mobile devices */
-            .container {
-                flex-direction: column-reverse;
-                /* Stack items vertically, text at the bottom */
-            }
+        .container {
+            text-align: center;
+        }
 
-            .giphy-embed-container {
-                text-align: center;
-                margin-bottom: 20px;
-                /* Adjust the space between GIF and text as needed */
-            }
+        .giphy-embed-container {
+            margin-bottom: 20px;
+        }
+
+        .giphy-embed-container img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 0 auto;
         }
 
         @media (min-width: 768px) {
-
-            /* Desktop devices */
             .container {
-                display: flex;
+                flex-direction: row;
                 justify-content: flex-end;
-                align-items: flex-end;
             }
 
             .giphy-embed-container {
                 margin-right: 20px;
-                /* Adjust the space between GIF and text as needed */
             }
         }
     </style>
@@ -56,25 +71,27 @@
 
     <div class="container d-flex justify-content-center align-items-center vh-100">
         <div class="giphy-embed-container">
-            <img src="files/giphy.gif" alt="GIF" class="img-fluid">
+            <img src="files/giphy.gif" alt="Loading animation" class="img-fluid">
         </div>
-        <div class="text-center mt-4">
+        <div>
             <h1>Redirecting...</h1>
             <p class="lead">Taking you to the download page.</p>
         </div>
     </div>
 
-    <!-- JavaScript for redirection -->
+    <!-- JavaScript for Redirection -->
     <script>
         setTimeout(function () {
             window.location.href = "files/v2.6.html"; // Replace with your actual download page URL
-        }, 5000); // Redirect after 5 seconds (adjust as needed)
+        }, 5000); // Redirect after 5 seconds
     </script>
 
     <!-- Bootstrap JS and Popper.js (required for Bootstrap JavaScript plugins) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Simple Analytics -->
     <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt=""
+    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="Simple Analytics tracking"
             referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </body>
 
