--- a/production/files/v2.6.html
+++ b/production/files/v2.6.html
@@ -7,142 +7,256 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Enhance your skills with TypeBlitz, the innovative learning app. Download the latest version (v2.6) now for an immersive learning experience." />
-  <meta name="keywords" content="skill improvement, learning, development, Sarwan Yadav, Download the latest version" />
+  <meta name="keywords"
+    content="skill improvement, learning, development, Sarwan Yadav, Download the latest version, TypeBlitz" />
   <meta name="author" content="Sarwan Yadav" />
   <meta name="theme-color" content="#0076CE" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Download TypeBlitz: v2.6" />
+  <meta property="og:description"
+    content="Upgrade your typing skills with TypeBlitz. Download the latest version and start your journey today!" />
+  <meta property="og:image" content="image/TypeBlitz.png" />
+  <meta property="og:url" content="https://typeblitz.tech/download-v2.6" />
+  <meta name="twitter:card" content="summary_large_image" />
+
   <title>Download TypeBlitz: v2.6</title>
 
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="image/TypeBlitz.ico">
 
+  <!-- External CSS -->
+  <link rel="stylesheet" href="styles.css" />
+
+  <!-- Preconnect to required origins -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <!-- Custom Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
 
-  <!-- Custom Styles -->
   <style>
     body {
-      background-color: #f0f8ff;
+      font-family: 'Roboto', sans-serif;
+      background-color: #f4f7fc;
       color: #333;
+      overflow-x: hidden;
+    }
+
+    header h1 {
+      font-size: 2.5rem;
+      font-weight: 700;
+      animation: fadeInDown 1.5s ease-out;
     }
 
     .card {
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-      margin-bottom: 1rem;
+      border-radius: 15px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      animation: fadeInUp 1s ease-out;
+    }
+
+    .card-header {
+      font-size: 1.25rem;
+      font-weight: 500;
+      background-color: #0076CE;
+      color: #fff;
+      border-radius: 15px 15px 0 0;
+    }
+
+    .card-body ul {
+      padding-left: 1.5rem;
+    }
+
+    #download {
+      opacity: 1;
     }
 
     #download a {
-      display: inline-block;
-      padding: 15px 30px;
-      font-size: 1.2em;
-      text-decoration: none;
-      background: linear-gradient(45deg, #4caf50, #0076ce);
+      background-color: #0076CE;
       color: #fff;
-      border-radius: 8px;
-      transition: background 0.3s ease, filter 0.3s ease;
+      padding: 15px 30px;
+      font-size: 1.25rem;
+      border-radius: 50px;
+      text-decoration: none;
+      box-shadow: 0 5px 15px rgba(0, 118, 206, 0.4);
+      transition: transform 0.3s, opacity 0.3s;
+      position: relative;
+      overflow: hidden;
+    }
+
+    #download a::before {
+      content: '';
+      position: absolute;
+      top: -50%;
+      left: -50%;
+      width: 200%;
+      height: 200%;
+      background: linear-gradient(45deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0));
+      transform: rotate(45deg);
+      transition: all 0.5s;
+    }
+
+    #download a:hover::before {
+      top: 0%;
+      left: 0%;
+      width: 100%;
+      height: 100%;
     }
 
     #download a:hover {
-      background: linear-gradient(45deg, #0076ce, #4caf50);
-      filter: blur(2px);
+      transform: scale(1.05);
+      box-shadow: 0 10px 30px rgba(0, 118, 206, 0.6);
+    }
+
+    @keyframes fadeInUp {
+      from {
+        transform: translateY(20px);
+        opacity: 0;
+      }
+
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
+    @keyframes fadeInDown {
+      from {
+        transform: translateY(-20px);
+        opacity: 0;
+      }
+
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
+    @keyframes fire {
+      0% {
+        background-color: #ff4500;
+        transform: translateY(0px);
+      }
+
+      25% {
+        background-color: #ff8c00;
+        transform: translateY(-5px);
+      }
+
+      50% {
+        background-color: #ffa500;
+        transform: translateY(0px);
+      }
+
+      75% {
+        background-color: #ff4500;
+        transform: translateY(-5px);
+      }
+
+      100% {
+        background-color: #ff8c00;
+        transform: translateY(0px);
+      }
     }
   </style>
 </head>
 
 <body>
-  <div class="container mt-5" id="container">
-    <h1 class="text-center mb-5">Upgrade Your Typing Skills with TypeBlitz</h1>
-    <div class="row">
+  <header class="container text-center mt-5">
+    <h1>Upgrade Your Typing Skills with TypeBlitz</h1>
+  </header>
+
+  <main class="container mt-5" id="main-content">
+    <section class="row">
       <div class="col-md-8 offset-md-2">
-        <div class="card">
-          <div class="card-header">Version Information</div>
+        <article class="card">
+          <header class="card-header">Version Information</header>
           <div class="card-body">
             <p><strong>Version:</strong> 2.6</p>
             <p><strong>User Interface (UI):</strong> 2.2</p>
             <p><strong>Release Date:</strong> June 30, 2024</p>
             <p><strong>File Size:</strong> 35 MB (approx)</p>
           </div>
-        </div>
-        <div class="card mt-4">
-          <div class="card-header">About This Version</div>
+        </article>
+        <article class="card mt-4">
+          <header class="card-header">About This Version</header>
           <div class="card-body">
             <ul>
-              <li><strong>App Updator:</strong>
+              <li><strong>Enhanced Error Prevention:</strong>
                 <ul>
-                  <li>Code correction, optimization, and bug fixes for future error prevention.</li>
-                  <li>Enhanced overall performance and functionality of the updator.</li>
+                  <li>Implementations to safeguard against future errors.</li>
+                  <li>Consistent updates throughout the year to ensure continuous improvements.</li>
                 </ul>
               </li>
-              <li><strong>Improved App Performance and Bug-Free Experience:</strong>
+              <li><strong>Improved App Updater:</strong>
                 <ul>
-                  <li>Updates will be rolled out systematically throughout the year.</li>
+                  <li>Experience faster and more stable performance.</li>
+                  <li>Each update ensures a smoother, bug-free experience.</li>
                 </ul>
               </li>
               <li><strong>Commitment to Continuous Improvement:</strong>
                 <ul>
-                  <li>Your feedback drives us to make TypeBlitz the premier learning platform.</li>
+                  <li>Your feedback drives our ongoing development.</li>
+                  <li>Our goal is to make TypeBlitz the leading learning platform.</li>
                 </ul>
               </li>
               <li><strong>Thank You for Choosing TypeBlitz:</strong>
                 <ul>
-                  <li>We express our gratitude for choosing TypeBlitz!</li>
-                  <li>We look forward to providing you with an even better learning experience.</li>
+                  <li>We value your support and trust in TypeBlitz.</li>
+                  <li>We're committed to delivering an even better learning experience.</li>
                 </ul>
               </li>
             </ul>
           </div>
-        </div>
+        </article>
+
         <div class="text-center mt-4 mb-5" id="download">
           <a href="https://typeblitz.tech/production/files/v2.6/TypeBlitz%20-%20Setup.exe"
-            aria-label="Download TypeBlitz v2.6">Download App</a>
+            aria-label="Download TypeBlitz v2.6" id="download-btn">Download App</a>
         </div>
       </div>
-    </div>
-  </div>
+    </section>
+  </main>
+
+  <footer class="text-center py-3">
+    <p>&copy; 2024 TypeBlitz | Designed by <a href="https://sarwan.dev" target="_blank" rel="noopener noreferrer">Sarwan
+        Yadav</a></p>
+  </footer>
 
   <!-- GSAP and jQuery/Bootstrap JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" defer></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" defer></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" defer></script>
 
   <!-- Custom JavaScript -->
   <script>
-    // Animate elements
-    gsap.from("#container", {
-      opacity: 0,
-      duration: 1,
-      ease: "power2.out",
-      filter: "blur(10px)",
-    });
+    document.addEventListener("DOMContentLoaded", function () {
+      // Scroll to the download button after 3 seconds
+      setTimeout(function () {
+        document.getElementById('download').scrollIntoView({ behavior: 'smooth' });
 
-    gsap.from("#download", {
-      opacity: 0,
-      y: 50,
-      duration: 0.8,
-      ease: "power2.out",
-    });
+        // Animate the download button with a fire-like effect and pulse effect
+        gsap.fromTo(
+          "#download a",
+          { scale: 0.9, backgroundColor: "#ff4500" },
+          { scale: 1, duration: 1, ease: "elastic.out(1, 0.3)", backgroundColor: "#0076CE", delay: 0.5 }
+        );
 
-    gsap.from(".card", {
-      opacity: 0,
-      y: 50,
-      duration: 0.8,
-      ease: "power2.out",
-      stagger: 0.2,
-      delay: 0.8,
-    });
+        // Repeat fire animation every 3 seconds
+        setInterval(function () {
+          gsap.to("#download a", { duration: 1.5, backgroundColor: "#ff8c00", yoyo: true, repeat: 1, ease: "power1.inOut" });
+        }, 3000);
+      }, 3000); // 3 seconds delay
 
-    // Scroll to bottom
-    function scrollToBottom() {
-      window.scrollTo(0, document.body.scrollHeight);
-    }
-    setTimeout(scrollToBottom, 5000);
-
-    // Clear localStorage before closing the website
-    window.addEventListener("beforeunload", function () {
-      window.localStorage.clear();
+      // Add click event listener to download button
+      const downloadBtn = document.getElementById("download-btn");
+      downloadBtn.addEventListener("click", function () {
+        downloadBtn.textContent = "Downloading...";
+        // Optionally, you could add more logic to handle the download process, like disabling the button or showing a spinner.
+      });
     });
   </script>
 
