--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <link rel="icon" type="image/x-icon" href="https://typeblitz.tech/assets/img/TypeBlitz.ico" />
 
   <!-- External Scripts -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" defer></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
   <!-- Preload critical resources for improved performance -->
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" as="style"
@@ -428,6 +428,21 @@
           navigator.serviceWorker
             .register("/service-worker.js", { scope: "/" })
             .then((registration) => {
+              // Force update check when the page loads
+              registration.update();
+
+              // Listen for updates and reload the page if a new service worker is installed
+              registration.onupdatefound = () => {
+                const newWorker = registration.installing;
+                newWorker.onstatechange = () => {
+                  if (newWorker.state === 'installed') {
+                    if (navigator.serviceWorker.controller) {
+                      // New update available, show a notification or reload the page
+                      window.location.reload();
+                    }
+                  }
+                };
+              };
               console.log("Service worker registered with scope:", registration.scope);
             })
             .catch((error) => {
@@ -438,21 +453,17 @@
     }
 
     function clearCookiesAndCache() {
-      window.addEventListener("beforeunload", () => {
-        document.cookie.split(";").forEach((cookie) => {
-          document.cookie = cookie
-            .replace(/^ +/, "")
-            .replace(/=.*/, "=;expires=" + new Date().toUTCString() + ";path=/");
-        });
-
-        if (caches && caches.keys) {
-          caches.keys().then((keys) => {
-            keys.forEach((key) => {
+      // Clear only specific outdated caches (if necessary)
+      if (caches && caches.keys) {
+        caches.keys().then((keys) => {
+          keys.forEach((key) => {
+            // Example: Clear caches older than a specific date
+            if (key !== 'your-current-cache-name') {
               caches.delete(key);
-            });
+            }
           });
-        }
-      });
+        });
+      }
     }
 
     function disableF12Key() {
@@ -483,6 +494,7 @@
       window.addEventListener("resize", setBackgroundImage);
     });
   </script>
+
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
