--- a/index.html
+++ b/index.html
@@ -317,11 +317,11 @@
       <div class="row justify-content-center">
         <div class="col-md-8 text-center">
           <div class="social-icons mb-3">
-            <a href="https://www.instagram.com/typeblitz/" target="_blank" class="social-icon text-darkgrey"
+            <a href="https://www.instagram.com/typeblitz/" target="_blank" class="social-icon"
               aria-label="Visit TypeBlitz on Instagram">
               <i class="fab fa-instagram fa-2x"></i>
             </a>
-            <a href="https://sarwan.netlify.app/" target="_blank" class="social-icon text-darkgrey"
+            <a href="https://sarwan.netlify.app/" target="_blank" class="social-icon"
               aria-label="Visit Sarwan Yadav's Developer Portfolio">
               <i class="fas fa-user fa-2x"></i>
             </a>
@@ -345,8 +345,7 @@
       <p class="lead mb-4">Click the button below to download the latest version of TypeBlitz.</p>
       <a href="production/redirect.html" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Download
         Now</a>
-      <button class="btn-close position-absolute top-0 end-0 m-2" id="closePopup"
-        aria-label="Close popup">&times;</button>
+      <button class="btn-close" id="closePopup" aria-label="Close popup">&times;</button>
     </div>
   </div>
 
