--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
   </section>
 
   <!-- Footer Section -->
-  <footer class="footer py-4 bg-dark text-white">
+  <footer class="footer py-4 text-white">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-8 text-center">
