--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     content="Enhance your typing skills with TypeBlitz. Boost your speed and accuracy with our innovative typing practice tool.">
   <meta name="keywords" content="typing, speed, improvement, TypeBlitz, typing practice, typing tool">
   <meta name="author" content="Sarwan Yadav">
+  <meta name="email" content="rangersarwan@gmail.com">
+  <meta name="phone" content="+91 8960446756">
   <meta name="theme-color" content="#ffffff">
   <meta name="language" content="en-US">
   <meta name="robots" content="index, follow">
