--- a/assets/404.html
+++ b/assets/404.html
@@ -9,6 +9,7 @@
     content="Page not found - 404 error on TypeBlitz. The page you are looking for doesn't exist. Return to the homepage or contact support.">
   <meta name="keywords" content="404 error, page not found, TypeBlitz, error page, TypeBlitz support">
   <meta name="author" content="Sarwan Yadav">
+  <meta name="theme-color" content="#e20606">
   <title>404 Page Not Found | TypeBlitz</title>
 
   <!-- Open Graph / Facebook -->
