--- a/assets/contact.html
+++ b/assets/contact.html
@@ -9,6 +9,7 @@
         content="Contact Sarwan Yadav via this secure and optimized contact form. Reach out with your inquiries and feedback.">
     <meta name="keywords" content="Contact, Sarwan Yadav, TypeBlitz, Support, Inquiry">
     <meta name="author" content="Sarwan Yadav">
+    <meta name="theme-color" content="#3805f2">
     <title>Contact Sarwan Yadav | TypeBlitz</title>
 
     <!-- Open Graph / Facebook -->
