--- a/assets/offline.html
+++ b/assets/offline.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Oops! You're offline. Please check your internet connection and try again.">
   <meta name="robots" content="noindex, nofollow">
+  <meta name="theme-color" content="#000000">
   <title>Offline Page</title>
 
   <!-- Load Bootstrap CSS from a CDN with integrity and crossorigin attributes -->
