--- a/production/latest/latest.html
+++ b/production/latest/latest.html
@@ -7,6 +7,7 @@
     <meta name="description" content="TypeBlitz: Web Update - Redirecting to the latest download page.">
     <meta name="keywords" content="TypeBlitz, Web Update, Redirect">
     <meta name="author" content="Sarwan Yadav">
+    <meta name="theme-color" content="#007bff">
     <title>Redirecting to New Download Page</title>
 
     <!-- Favicon -->
