--- a/production/redirect.html
+++ b/production/redirect.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Redirecting to the download page. Your download will start shortly.">
     <meta name="keywords" content="download, redirect, file download">
     <meta name="author" content="Sarwan Yadav">
+    <meta name="theme-color" content="#0076CE" />
     <title>Redirecting to Download | TypeBlitz</title>
 
     <!-- Open Graph / Facebook -->
