--- a/assets/success.html
+++ b/assets/success.html
@@ -7,6 +7,7 @@
     <title>Success Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <meta name="description" content="Your message has been successfully sent.">
+    <meta name="theme-color" content="#00ff26">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://typeblitz.tech/success-page">
 
