--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="author" content="Sarwan Yadav">
   <meta name="email" content="rangersarwan@gmail.com">
   <meta name="phone" content="+91 8960446756">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#0076CE" />
   <meta name="language" content="en-US">
   <meta name="robots" content="index, follow">
 
