--- a/production/files/v2.0.html
+++ b/production/files/v2.0.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Enhance your skills with TypeBlitz, the innovative learning app. Download the latest version (v1.2) now for an immersive learning experience.">
+  <meta name="description"
+    content="Enhance your skills with TypeBlitz, the innovative learning app. Download the latest version (v1.2) now for an immersive learning experience.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="keywords" content="skill improvement, learning, development, Sarwan Yadav, Download the latest version">
   <meta name="author" content="Sarwan Yadav">
-  <meta name="theme-color" content="#RRGGBB">
+  <meta name="theme-color" content="#4CAF50">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <title>Download TypeBlitz: v2.0</title>
@@ -64,16 +65,22 @@
           </div>
           <div class="card-body">
             <ul>
-              <li>We're thrilled to share that our updates, considering our limited developer availability, will be rolled out systematically throughout the year.</li>
+              <li>We're thrilled to share that our updates, considering our limited developer availability, will be
+                rolled out systematically throughout the year.</li>
               <br>
               <li><b>Initial Release</b></li>
-              <li><b>About Section Redesign:</b> Experience the fresh and engaging new look of our 'About' section, as we have revamped it to enhance the user experience.</li>
-              <li><b>Updator Overhaul:</b> The Updator has been revamped to address previous errors during installation. The latest bug-free version ensures a seamless updating process, contributing to an enhanced user experience.</li>
-              <li><b>Commitment to Continuous Improvement:</b> Your feedback is invaluable, and our dedication to continuous improvement drives us to make TypeBlitz the premier learning platform for our users.</li>
+              <li><b>About Section Redesign:</b> Experience the fresh and engaging new look of our 'About' section, as
+                we have revamped it to enhance the user experience.</li>
+              <li><b>Updator Overhaul:</b> The Updator has been revamped to address previous errors during installation.
+                The latest bug-free version ensures a seamless updating process, contributing to an enhanced user
+                experience.</li>
+              <li><b>Commitment to Continuous Improvement:</b> Your feedback is invaluable, and our dedication to
+                continuous improvement drives us to make TypeBlitz the premier learning platform for our users.</li>
               <br>
               <li><b>Thank You for Choosing TypeBlitz:</b></li>
               <br>
-              <li>Once again, we express our gratitude for choosing <b>TypeBlitz!</b> We are excited about the journey ahead and look forward to providing you with an even better learning experience.</li>
+              <li>Once again, we express our gratitude for choosing <b>TypeBlitz!</b> We are excited about the journey
+                ahead and look forward to providing you with an even better learning experience.</li>
             </ul>
           </div>
         </div>
