--- a/production/files/v2.4.html
+++ b/production/files/v2.4.html
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="keywords" content="skill improvement, learning, development, Sarwan Yadav, Download the latest version">
   <meta name="author" content="Sarwan Yadav">
-  <meta name="theme-color" content="#RRGGBB">
+  <meta name="theme-color" content="#4CAF50" />
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <title>Download TypeBlitz: v2.4</title>
