--- a/production/files/versions.html
+++ b/production/files/versions.html
@@ -7,6 +7,7 @@
   <meta name="description" content="404 Error Page - TypeBlitz. The page you are looking for does not exist.">
   <meta name="keywords" content="404 error, page not found, TypeBlitz">
   <meta name="author" content="Sarwan Yadav">
+  <meta name="theme-color" content="#0076CE" />
   <title>404 Not Found - TypeBlitz</title>
 
   <!-- Bootstrap CSS -->
