--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             Whether you’re a beginner or an experienced typist, our platform offers a tailored learning experience to
             help you reach your typing goals. Dive into engaging exercises with real-time feedback to monitor and
             enhance your progress.</p>
-          <p class="mb-0">Crafted with ❤️ by <a href="https://ellowdigitals.netlify.app/" target="_blank"
+          <p class="mb-0">Crafted with ❤️ by <a href="https://ellowdigitals.me/" target="_blank"
               rel="noopener noreferrer" class="text-secondary">EllowDigitals</a></p>
         </div>
       </div>
@@ -288,7 +288,7 @@
       <p class="lead text-center mb-4">If you wish to contact us, please complete the form below:</p>
       <div class="row justify-content-center">
         <div class="col-md-8">
-          <form action="https://formsubmit.co/sarwanyadav6174@gmail.com" method="POST">
+          <form action="https://formsubmit.co/ellowdigitals@gmail.com" method="POST">
             <div class="form-group mb-4">
               <label for="name" class="form-label">Your Name</label>
               <input type="text" name="name" class="form-control" id="name" required autocomplete="name">
