--- a/assets/contact.html
+++ b/assets/contact.html
@@ -144,7 +144,7 @@
 <body>
     <div class="contact-form">
         <h2>Contact Us</h2>
-        <form action="https://formsubmit.co/sarwanyadav6174@gmail.com" method="POST">
+        <form action="https://formsubmit.co/ellowdigitals@gmail.com" method="POST">
             <label for="name">Your Name</label>
             <input type="text" id="name" name="name" required>
 
